--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"next-i18next": "^14.0.3",
 		"next-seo": "5.5.0",
 		"postcss": "8.4.29",
+		"prettier": "^3.0.3",
 		"prisma": "^5.3.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
