--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
 	"name": "derna-call",
-	"version": "0.2.0",
+	"version": "0.1.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start",
+		"start": "./node_modules/.bin/next start -p $PORT",
 		"lint": "next lint",
 		"format": "prettier --write .",
-		"docker:build": "docker build --platform linux/amd64 -t gcr.io/builder-349218/dernacall:0.2.0 .",
-		"docker:push": "docker push gcr.io/builder-349218/dernacall:0.2.0"
+		"docker:build": "docker build --platform linux/amd64 -t gcr.io/builder-349218/dernacall:0.1.0 .",
+		"docker:push": "docker push gcr.io/builder-349218/dernacall:0.1.0"
 	},
 	"dependencies": {
 		"@prisma/client": "^5.3.1",
