--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "./node_modules/.bin/next start -p $PORT",
+		"migrate": "prisma migrate deploy",
 		"lint": "next lint",
 		"format": "prettier --write .",
 		"docker:build": "docker build --platform linux/amd64 -t gcr.io/builder-349218/dernacall:0.1.0 .",
