--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "derna-call",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,8 +9,8 @@
     "migrate": "prisma migrate deploy",
     "lint": "next lint",
     "format": "prettier --write .",
-    "docker:build": "docker build --platform linux/amd64 -t gcr.io/builder-349218/dernacall:1.0.0 .",
-    "docker:push": "docker push gcr.io/builder-349218/dernacall:1.0.0"
+    "docker:build": "docker build --platform linux/amd64 -t gcr.io/builder-349218/dernacall:1.1.0 .",
+    "docker:push": "docker push gcr.io/builder-349218/dernacall:1.1.0"
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.2.10",
     "autoprefixer": "10.4.16",
     "core-js": "^3.33.0",
+    "core.js": "^0.4.2",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
     "framer-motion": "10.16.4",
